fixed issue with content wrap

--- a/css/style.css
+++ b/css/style.css
@@ -882,10 +882,6 @@ table {
 	padding-right: 2em;
   }
   
-  #courses-section-a .content-wrap {
-  padding: 5em;
-  }
-  
   .info {
     font-size: 50px;
   }
@@ -897,9 +893,13 @@ table {
 }
 
 @media(min-width: 950px) {
-.courses div {
+  .courses div {
 	width: 40%;
- }
+  }
+ 
+  #courses-section-a .content-wrap {
+   padding: 2em;
+  }
 }
 
 /* media query to change content wrap and adjust padding to the left and right when device screen size is between 749 and 1299 px */
